[gd_scene load_steps=8 format=3 uid="uid://cilnf2ou1exce"]

[ext_resource type="Script" path="res://app/scenes/users.gd" id="1_a0kuf"]
[ext_resource type="PackedScene" uid="uid://8gfdgse005io" path="res://app/scenes/user_icon.tscn" id="1_ty2er"]
[ext_resource type="Texture2D" uid="uid://21utx1fndnnu" path="res://assets/textures/plus.png" id="3_e3fci"]
[ext_resource type="Texture2D" uid="uid://bdub1lpdb5ci1" path="res://assets/textures/minus.png" id="4_cbhsx"]
[ext_resource type="Texture2D" uid="uid://cdi4urktq6pna" path="res://assets/textures/return.png" id="5_cpubj"]
[ext_resource type="Texture2D" uid="uid://rsregqlutnqh" path="res://assets/textures/cross.png" id="6_mjlex"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mdeuy"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="users" type="Panel"]
offset_right = 309.0
offset_bottom = 502.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mdeuy")
script = ExtResource("1_a0kuf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="icon" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_ty2er")]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 4

[node name="user_name" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="user_list" type="ItemList" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="edit_user" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="user_name" type="LineEdit" parent="MarginContainer/VBoxContainer/edit_user"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "key_title_user_name"

[node name="add" type="TextureButton" parent="MarginContainer/VBoxContainer/edit_user"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "key_hint_add_user"
texture_normal = ExtResource("3_e3fci")
ignore_texture_size = true
stretch_mode = 5

[node name="remove" type="TextureButton" parent="MarginContainer/VBoxContainer/edit_user"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "key_hint_remove_user"
texture_normal = ExtResource("4_cbhsx")
ignore_texture_size = true
stretch_mode = 5

[node name="rename" type="TextureButton" parent="MarginContainer/VBoxContainer/edit_user"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "key_hint_rename_user"
texture_normal = ExtResource("5_cpubj")
ignore_texture_size = true
stretch_mode = 5

[node name="close" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.905
anchor_top = 0.056
anchor_right = 0.905
anchor_bottom = 0.056
offset_left = -20.645
offset_top = -19.112
offset_right = 21.355
offset_bottom = 22.888
icon = ExtResource("6_mjlex")
expand_icon = true

[connection signal="send_change_icon" from="MarginContainer/VBoxContainer/icon" to="." method="_on_icon_send_change_icon"]
[connection signal="item_clicked" from="MarginContainer/VBoxContainer/user_list" to="." method="_on_user_list_item_clicked"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/edit_user/user_name" to="." method="_on_user_name_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/edit_user/add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/edit_user/remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/edit_user/rename" to="." method="_on_rename_pressed"]
[connection signal="pressed" from="close" to="." method="_on_button_pressed"]
